# brief-bot

./: .dockerignore  .gitignore  Dockerfile  docker-compose.dev.yml  docker-compose.yml  example.env  pyproject.toml
app/: __main__.py  logger.py  settings.py  test.py
app/db/: crud.py  sqlalchemy.py
app/db/chats/: models.py  repo.py
app/db/messages/: models.py  repo.py
app/db/migrations/: env.py
app/db/migrations/versions/: 3bd2455d1aa0_message.py  4dfee3575b11_chat.py  5f508d094b99_message.py  970d346b0b3b_message.py
app/db/users/: models.py  repo.py
app/handlers/: any_message.py  bot_add_group.py  common.py  routers.py  summarize.py
app/ioc/: chats.py  container.py  database.py  g4f.py  messages.py  users.py
app/middlewares/: __init__.py  logging.py
app/schemas/: chats.py  messages.py  users.py
app/services/: chats.py  messages.py  users.py
